finalproject0124/src/main/java/com/test/finalproject/error/exception/FormBindException.java
package com.test.finalproject.error.exception;

public class FormBindException extends RuntimeException{

	public FormBindException() {
		super();
	}
	
	public FormBindException(String message) {
		super(message);
	}
}
